--- a/package.json
+++ b/package.json
@@ -4,15 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^28.1.0"
+    "cross-env": "^5.2.0",
+    "jest": "^28.1.0",
+    "nodemon": "^2.0.19"
   },
   "dependencies": {
-    "hex-to-binary": "^1.0.1"
+    "body-parser": "^1.20.0",
+    "elliptic": "^6.4.1",
+    "express": "^4.17.2",
+    "hex-to-binary": "^1.0.1",
+    "pubnub": "^4.21.6",
+    "redis": "^2.8.0",
+    "request": "^2.88.2"
   }
 }
