--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express": "^4.17.2",
     "hex-to-binary": "^1.0.1",
     "pubnub": "^4.21.6",
-    "redis": "^2.8.0",
-    "request": "^2.88.2"
+    "redis": "^4.2.0",
+    "request": "^2.88.2",
+    "uuid": "^3.3.2"
   }
 }
