--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --watchAll",
     "start": "npm run build-client & node index.js",
-    "dev": "concurrently --kill-others \"npm run dev-client\" \"npm run start-redis\"\"nodemon index.js\" \"cross-env ENV='development'\"",
+    "dev": "concurrently --kill-others \"npm run dev-client\" \"npm run start-redis\"\"nodemon index.js\" \"cross-env ENV='prod'\"",
     "dev-peer": "cross-env GENERATE_PEER_PORT='true' ENV='development' nodemon index.js",
     "build-client": "npm run clean && parcel build client/src/index.html --out-dir client/dist",
     "dev-client": "npm run clean && parcel client/src/index.html --out-dir client/dist",
