--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "cyrptochain",
+  "name": "cryptochain",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
     "start": "npm run build-client & node index.js",
-    "dev": "npm run dev-client & npm run start-redis && cross-env ENV='prod' nodemon index.js",
-    "dev-peer": "cross-env GENERATE_PEER_PORT='true' ENV='prod' nodemon index.js",
+    "dev": "npm run dev-client & npm run start-redis && cross-env ENV='development' nodemon index.js",
+    "dev-peer": "cross-env GENERATE_PEER_PORT='true' ENV='development' nodemon index.js",
     "start-redis": "redis-server --daemonize yes",
     "build-client": "npm run clean && parcel build client/src/index.html --out-dir client/dist",
     "dev-client": "npm run clean && parcel client/src/index.html --out-dir client/dist",
@@ -21,27 +21,28 @@
   "license": "ISC",
   "devDependencies": {
     "cross-env": "^5.2.0",
-    "jest": "^28.1.0",
-    "nodemon": "^2.0.19"
+    "jest": "^23.6.0",
+    "nodemon": "^1.18.4"
   },
   "dependencies": {
-    "@types/react": "^18.0.15",
-    "body-parser": "^1.20.0",
-    "bootstrap": "^5.2.0",
-    "concurrently": "^7.3.0",
-    "core-js": "^2.6.12",
+    "babel-core": "^6.26.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.18.3",
     "elliptic": "^6.4.1",
-    "express": "^4.17.2",
+    "express": "^4.16.3",
     "hex-to-binary": "^1.0.1",
     "history": "^4.7.2",
-    "parcel-bundler": "^1.12.5",
+    "parcel-bundler": "^1.10.3",
     "pubnub": "^4.21.6",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
-    "react-dom": "^18.2.0",
+    "react": "^16.6.0",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
-    "redis": "^4.2.0",
-    "request": "^2.88.2",
+    "redis": "^2.8.0",
+    "request": "^2.88.0",
     "uuid": "^3.3.2"
   }
 }
